# mygram-db

./: .actrc  .clang-format  .clang-tidy  .clangd  .dockerignore  .env.example  .gitignore  .test-diff.conf.example  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_ja.md  codecov.yml  config.yaml.example  docker-compose.bench.yml  docker-compose.yml
e2e/: README.md  benchmark.py  benchmark_suite.py  conftest.py  pyproject.toml  run-all.sh  run-failover.sh  run-matrix.sh  test_mariadb_replication.sh
e2e/docker/: docker-compose.failover.yml  docker-compose.mariadb.yml  docker-compose.yml  mygramdb-test-failover.yaml  mygramdb-test-mariadb.yaml  mygramdb-test.yaml
e2e/lib/: data_generator.py  metrics.py  mygramdb_client.py  mysql_client.py  raw_socket.py  stats.py  wait.py
src/: CMakeLists.txt  main.cpp  version.h.in
src/app/: CMakeLists.txt  application.cpp  application.h  command_line_parser.cpp  command_line_parser.h  configuration_manager.cpp  configuration_manager.h  mysql_reconnection_handler.cpp  mysql_reconnection_handler.h  server_orchestrator.cpp  server_orchestrator.h  signal_manager.cpp  signal_manager.h
src/cache/: CMakeLists.txt  cache_entry.h  cache_key.cpp  cache_key.h  cache_manager.cpp  cache_manager.h  cache_types.h  invalidation_manager.cpp  invalidation_manager.h  invalidation_queue.cpp  invalidation_queue.h  md5.cpp  md5.h  query_cache.cpp  query_cache.h  query_normalizer.cpp  result_compressor.cpp  result_compressor.h
src/cli/: CMakeLists.txt  mygram-cli.cpp
src/client/: CMakeLists.txt  mygramclient.cpp  mygramclient.h  mygramclient_c.cpp  mygramclient_c.h  protocol_detection.h  search_expression.cpp  search_expression.h
src/config/: CMakeLists.txt  config-schema.json  config.cpp  config.h  config_help.cpp  config_help.h  config_internal.h  config_loader.cpp  config_validator.cpp  runtime_variable_manager.cpp  runtime_variable_manager.h
src/index/: CMakeLists.txt  bm25_scorer.cpp  bm25_scorer.h  index.cpp  index.h  index_optimization.cpp  index_serialization.cpp  posting_list.cpp  posting_list.h
src/loader/: CMakeLists.txt  initial_loader.cpp  initial_loader.h
src/mysql/: CMakeLists.txt  binlog_event_parser.cpp  binlog_event_parser.h  binlog_event_processor.cpp  binlog_event_processor.h  binlog_event_types.h  binlog_filter_evaluator.cpp  binlog_filter_evaluator.h  binlog_reader.cpp  binlog_reader.h  binlog_reader_interface.h  binlog_reader_internal.h  binlog_reader_threads.cpp  binlog_reader_utils.cpp  binlog_stream.cpp  binlog_stream.h  binlog_util.h  connection.cpp  connection.h  connection_validator.cpp  connection_validator.h  gtid_encoder.cpp  gtid_encoder.h  mariadb_binlog_stream.cpp  mariadb_binlog_stream.h  mariadb_event_parser.cpp  mariadb_event_parser.h  mariadb_gtid.cpp  mariadb_gtid.h  mysql_binlog_stream.cpp  mysql_binlog_stream.h  null_binlog_reader.h  rows_parser.cpp  rows_parser.h  rows_parser_field_decoder.cpp  rows_parser_filter.cpp  rows_parser_internal.h  server_flavor.h  table_metadata.cpp  table_metadata.h
src/query/: CMakeLists.txt  cache_key.cpp  cache_key.h  highlighter.cpp  highlighter.h  md5.cpp  query_ast.cpp  query_ast.h  query_normalizer.cpp  query_normalizer.h  query_parser.cpp  query_parser.h  query_parser_clauses.cpp  query_parser_commands.cpp  query_parser_internal.h  result_sorter.cpp  result_sorter.h  synonym_dictionary.cpp  synonym_dictionary.h
src/server/: CMakeLists.txt  connection_acceptor.cpp  connection_acceptor.h  connection_io_handler.cpp  connection_io_handler.h  http_server.cpp  http_server.h  http_server_handlers.cpp  io_reactor.cpp  io_reactor.h  log_field_names.h  operation_names.h  protocol_constants.h  rate_limiter.cpp  rate_limiter.h  reactor_connection.cpp  reactor_connection.h  replication_pause_counter.h  request_dispatcher.cpp  request_dispatcher.h  response_formatter.cpp  response_formatter.h  search_pipeline.cpp  search_pipeline.h  server_lifecycle_manager.cpp  server_lifecycle_manager.h  server_stats.cpp  server_stats.h  server_types.h  snapshot_scheduler.cpp  snapshot_scheduler.h  socket_utils.cpp  socket_utils.h  statistics_service.cpp  statistics_service.h  sync_operation_manager.cpp  sync_operation_manager.h  table_catalog.cpp  table_catalog.h  tcp_server.cpp  (+3 more)
src/storage/: CMakeLists.txt  document_store.cpp  document_store.h  document_store_internal.h  document_store_persistence.cpp  document_store_retrieval.cpp  dump_format.h  dump_format_v1.cpp  dump_format_v1.h  dump_format_v1_config.cpp  dump_format_v1_integrity.cpp  dump_format_v1_internal.h  dump_format_v2.cpp  dump_format_v2.h  dump_load_access.h  dump_manager.cpp  dump_manager.h  filter_index.cpp  filter_index.h  gtid_state.cpp  gtid_state.h  snapshot.cpp  snapshot.h  snapshot_builder.cpp  snapshot_builder.h
src/types/: doc_id.h
src/utils/: CMakeLists.txt  atomic_file_writer.cpp  atomic_file_writer.h  binary_io.h  comparison_utils.h  constants.h  crc32.h  daemon_utils.cpp  daemon_utils.h  datetime_converter.cpp  datetime_converter.h  edit_distance.cpp  edit_distance.h  endian_utils.h  errno_utils.h  error.h  expected.h  fd_guard.h  flag_guard.h  hash_utils.h  memory_utils.cpp  memory_utils.h  namespace_compat.h  network_utils.cpp  network_utils.h  numeric_parse.h  periodic_worker.cpp  periodic_worker.h  roaring_bitmap_ptr.h  safe_path.cpp  safe_path.h  sql_utils.cpp  sql_utils.h  string_utils.cpp  string_utils.h  structured_log.h
support/benchmark/: README.md  benchmark.py  pyproject.toml  setup.cfg
tests/: CMakeLists.txt  signal_handler_test.cpp
tests/app/: CMakeLists.txt  application_test.cpp  command_line_parser_test.cpp  configuration_manager_test.cpp  signal_manager_test.cpp
tests/cache/: CMakeLists.txt  cache_key_test.cpp  cache_manager_test.cpp  cache_metrics_test.cpp  cache_thread_safety_test.cpp  invalidation_manager_test.cpp  invalidation_queue_test.cpp  md5_test.cpp  query_cache_test.cpp  query_normalizer_test.cpp  result_compressor_test.cpp
tests/cli/: CMakeLists.txt  mygram_cli_test.cpp
tests/client/: CMakeLists.txt  ctypes_smoke_test.py  (+2 more)
(+418 files in other folders)
