[project]
name = "mygramdb-e2e"
version = "0.1.0"
description = "MygramDB end-to-end and load tests"
authors = [
    { name = "libraz", email = "libraz@libraz.net" }
]
requires-python = ">= 3.10"
dependencies = [
    "mysql-connector-python>=9.5.0",
    "requests>=2.31.0",
    "pytest>=8.0.0",
    "pytest-timeout>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: Basic connectivity and health checks",
    "replication: MySQL replication verification",
    "search: Search accuracy tests",
    "unicode: Unicode and internationalization",
    "edge_cases: Boundary conditions",
    "ddl: DDL event handling",
    "concurrency: Concurrent access",
    "cache: Cache behavior",
    "memory: Memory management",
    "statistics: Metrics accuracy",
    "load: Load and performance tests",
    "persistence: Dump/restore",
    "resilience: Fault recovery",
    "multi_table: Multiple table tests",
]
timeout = 120
junit_family = "xunit2"
addopts = "--junitxml=results/reports/e2e.xml -v"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
